--- a/.github/workflows/profile-3d.yaml
+++ b/.github/workflows/profile-3d.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
     steps:
-      - uses: actions/create-github-app-token@v1
+      - uses: actions/create-github-app-token@v2
         id: app-token
         with:
           app-id: ${{ vars.APP_ID }}
@@ -24,19 +24,20 @@ jobs:
           git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
           git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>'
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           token: ${{ steps.app-token.outputs.token }}
           ref: ${{ github.head_ref }}
 
-      - uses: yoshi389111/github-profile-3d-contrib@fd54cf20784ed9a86dc7be48bb5eb1f74e92b4f8 # 0.7.1
+      - uses: yoshi389111/github-profile-3d-contrib@208d8215bd117497a02c94f559f94474ba23819c # 0.9.1
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           USERNAME: ${{ github.repository_owner }}
 
       - name: Commit & Push
         run: |
-          mv profile-3d-contrib/profile-night-rainbow.svg images/profile-3d.svg
+          mv profile-3d-contrib/profile-season-animate.svg images/profile-3d.light.svg
+          mv profile-3d-contrib/profile-night-rainbow.svg images/profile-3d.dark.svg
           rm -rf profile-3d-contrib
 
           if ! git diff --quiet; then
